# UpNDown

./: .env.example  .gitignore  AGENTS.md  README.md  TZ.md  auth-callback.html  capacitor.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.ts  vite.host.config.ts
docs/: APP-WORKPLAN-WS-IAP-CC.md  ARCHITECTURE-ACCOUNTS-RATINGS.md  AVATARS-AND-NAMES-PLAN.md  BACKUP-RESTORE-LOCALSTORAGE.md  Cursor-перенос-на-другой-диск.md  GIT-ОТДЕЛИТЬ-PC-И-MOBILE.md  HOST-DESKTOP.md  HOST-INSTALLER.md  HOST-LAN-PUBLISH.md  HOST-UTILITY.md  LAN-SERVER-V2-RFC.md  LAN-SERVER-V2-WORKFLOW.md  MOBILE-AND-APK-PLAN.md  NEXT-STEPS-AUTH-RATINGS-ONLINE.md  OFFLINE-MATCH-CLOUD.md  ONLINE-ABSENT-HOST.md  ONLINE-CODE-MAP-AND-CLEANUP.md  ONLINE-EGRESS-OPTIMIZATION-PLAN.md  ONLINE-GAME-STATE-REVISION.md  ONLINE-SERVER-INSTRUCTIONS.md  ONLINE-SUPABASE-ПОШАГОВО.md  ONLINE-УПРОЩЕНИЯ-И-ПЕРЕЕЗД.md  OWNER-AFTER-WS-READY.md  PARTNERSHIP-AU-CALL-GUIDE.md  PARTNERSHIP-WAVE5-TRIGGERS.md  PARTY-SETTLEMENT-PLAN.md  PC-CARDS-PROTECT-MOBILE.md  PERSONAL-AI-CONCEPT.md  PLAN-DALEE.md  PLATFORMS-WEB-APK-DESKTOP.md  PORTAL-CRM.md  PWA-DESKTOP-ICON.md  PWA-И-ИКОНКИ.md  RECOVER-CURSOR-CHAT.md  ROADMAP-THREE-FOUNDERS.md  RUNBOOK-ONLINE-MAINTENANCE-TICK.md  SOLO-OWNERSHIP-CHECKLIST.md  (+11 more)
docs-site/: .env.example  .gitignore  README.md  auth-callback.html  index.html  package-lock.json  package.json  style.css  vite.config.ts
host-desktop/src-tauri/: Cargo.toml  tauri.conf.json
host-desktop/src-tauri/capabilities/: default.json
host-desktop/src-tauri/src/: lib.rs  main.rs
(+234 files in other folders)
